# agentmon

./: .gitignore  CLAUDE.md  CONTAINER.md  IDEAS.md  README.md  SECURITY.md  SESSION.md  SMART_ANALYZE.md  plan.txt  pyproject.toml
.claude/commands/: watchdog.md
.code-review/: TODO.md  assumptions.md
agentmon/: __init__.py  cli.py  config.py  resolver.py  threat_feeds.py
agentmon/analyzers/: __init__.py  connection.py  device_activity.py  dns_baseline.py  entropy.py  volume_anomaly.py
agentmon/collectors/: __init__.py  pihole.py  pihole_log.py  syslog_parsers.py  syslog_receiver.py
agentmon/dashboard/: __init__.py  app.py
agentmon/dashboard/routes/: alerts.py
agentmon/dashboard/static/: style.css
agentmon/dashboard/templates/: index.html
agentmon/llm/: __init__.py  anthropic_client.py  classifier.py
agentmon/models/: __init__.py  events.py
agentmon/notifiers/: __init__.py  slack.py
agentmon/policies/: __init__.py  category_classifier.py  device_manager.py  models.py  parental_analyzer.py
agentmon/reassess/: __init__.py  analyzer.py  queries.py  report.py
agentmon/storage/: __init__.py  db.py
agentmon/threat_intel/: __init__.py  virustotal.py
agentmon/watchdog/: __init__.py  models.py  ooda.py  queries.py
config/: agentmon.example.toml  agentmon.service
docs/: THREAT_FEEDS.md  edge-setup.md
scripts/: benchmark_models.py  watchdog-snapshot.sh
tests/: __init__.py  test_alert_tuning.py  test_category_classifier.py  test_classifier.py  test_config_locking.py  test_connection_pipeline.py  test_dashboard.py  test_dns_baseline.py  test_entropy.py  test_integration.py  test_parental.py  test_reassess.py  test_resolver.py  test_security_low.py  test_security_medium.py  test_slack.py  test_syslog.py  test_threat_feeds.py  test_volume_anomaly.py  test_watchdog.py
