[project]
name = "agentmon"
version = "0.1.0"
description = "Network agent activity monitor and auditor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "tomli>=2.0.0",
    "paramiko>=3.4.0",  # SSH for remote log collection
    "httpx>=0.27.0",    # For LLM API calls
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[project.scripts]
agentmon = "agentmon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4", "SIM"]
